# TENT

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  code_of_conduct.md  configure.ac  libsnowgemconsensus.pc.in
contrib/: README.md  snowgem-cli.bash-completion  snowgem-tx.bash-completion  snowgemd.bash-completion
contrib/amqp/: amqp_sub.py
contrib/bitrpc/: bitrpc.py
contrib/ci-workers/: README.md  grind.yml  unix.yml
contrib/debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  snowgem.examples  snowgem.install  snowgem.manpages
contrib/devtools/: gen-manpages.sh  symbol-check.py
contrib/gitian-descriptors/: gitian-linux.yml
contrib/linearize/: example-linearize.cfg  linearize-hashes.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: generate-seeds.py
contrib/spendfrom/: spendfrom.py
depends/: Makefile
doc/: amqp.md  authors.md  developer-notes.md  dnsseed-policy.md  files.md  hotfix-process.md  init.md  payment-api.md  payment-disclosure.md  release-process.md  security-warnings.md  shield-coinbase.md  tor.md  translation_strings_policy.md  unit-tests.md  wallet-backup.md  zmq.md
doc/man/: Makefile.am  snowgem-cli.1  snowgem-fetch-params.1  snowgem-tx.1  snowgemd.1
doc/release-notes/: release-notes-0.11.2.z3.md  release-notes-0.11.2.z4.md  release-notes-0.11.2.z5.md  release-notes-0.11.2.z7.md  release-notes-0.11.2.z8.md  release-notes-0.11.2.z9.md  release-notes-1.0.0-beta1.md  release-notes-1.0.0-beta2.md  release-notes-1.0.0-rc1.md  release-notes-1.0.0-rc2.md  release-notes-1.0.0-rc3.md  release-notes-1.0.0-rc4.md  release-notes-1.0.0.md  release-notes-1.0.10.md  release-notes-1.0.11-rc1.md  release-notes-1.0.12-rc1.md  release-notes-1.0.12.md  release-notes-1.0.13-rc1.md  release-notes-1.0.3.md  release-notes-1.0.4.md  release-notes-1.0.5.md  release-notes-1.0.6.md  release-notes-1.0.7.md  release-notes-1.0.8.md  release-notes-1.0.9.md  release-notes-3.1.3.md  release-notes-3.1.4.md
qa/pull-tester/: rpc-tests.sh  run-bitcoind-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: getblocktemplate.py  key_import_export.py  mempool_tx_input_limit.py  paymentdisclosure.py  prioritisetransaction.py  proton_test.py  rawtransactions.py  tlsprotocols.py  wallet_1941.py  wallet_nullifiers.py  wallet_protectcoinbase.py  wallet_shieldcoinbase.py  wallet_treestate.py  zapwallettxes.py
qa/snowgem/: create_benchmark_archive.py  create_wallet_200k_utxos.py  full_test_suite.py  performance-measurements.sh  test-depends-sources-mirror.py
src/: Makefile  Makefile.am  Makefile.gtest.include  Makefile.snowgem.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.h  amount.cpp  amount.h  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  deprecation.cpp  deprecation.h  httprpc.cpp  httpserver.cpp  httpserver.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  (+69 more)
src/amqp/: amqpabstractnotifier.cpp  amqpabstractnotifier.h  amqpconfig.h  amqpnotificationinterface.cpp  amqpnotificationinterface.h  amqppublishnotifier.cpp  amqppublishnotifier.h  amqpsender.h
src/consensus/: consensus.h  params.h  upgrades.cpp
src/crypto/: common.h  equihash.cpp  equihash.h  equihash.tcc
src/gtest/: main.cpp  test_checkblock.cpp  test_checktransaction.cpp  test_circuit.cpp  test_equihash.cpp  test_foundersreward.cpp  test_joinsplit.cpp  test_keystore.cpp  test_libsnowgem_utils.cpp  test_mempool.cpp  test_merkletree.cpp  test_noteencryption.cpp  test_paymentdisclosure.cpp  test_pow.cpp  test_proofs.cpp  test_sapling_note.cpp  test_transaction.cpp  test_transaction_builder.cpp  test_txid.cpp  test_validation.cpp  test_zip32.cpp
src/pow/tromp/: equi.h  equi_miner.h
src/primitives/: block.h  transaction.cpp  transaction.h
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  snowgemconsensus.cpp  snowgemconsensus.h  standard.cpp  standard.h
src/snowgem/: Address.cpp  Address.hpp  CreateJoinSplit.cpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp  Snowgem.h  prf.h  util.cpp
src/snowgem/circuit/: gadget.tcc
src/tent/: tlsenums.h  tlsmanager.cpp  tlsmanager.h  utiltls.cpp  utiltls.h
src/test/: bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  equihash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  pmt_tests.cpp  pow_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_tests.cpp  sighash_tests.cpp  test_bitcoin.cpp  torcontrol_tests.cpp  transaction_tests.cpp  util_tests.cpp
src/test/data/: bitcoin-util-test.json  tx_invalid.json
src/univalue/: Makefile.am
src/univalue/include/: univalue.h
src/wallet/: asyncrpcoperation_common.cpp  asyncrpcoperation_common.h  asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_saplingconsolidation.cpp  asyncrpcoperation_saplingconsolidation.h  asyncrpcoperation_saplingmigration.cpp  asyncrpcoperation_saplingmigration.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  walletdb.cpp  walletdb.h
src/wallet/gtest/: test_wallet.cpp  test_wallet_zkeys.cpp
src/zcash/: Address.cpp  CreateJoinSplit.cpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Zcash.h  prf.cpp  prf.h  zip32.cpp  zip32.h
src/zen/: tlsmanager.cpp
zcutil/: bdb_win.patch  build-debian-package.sh  build-mac.sh  build-win.sh  build.sh  cleanup-tags.sh  fetch-params.sh  make-release.py  release-notes.py
(+7 files in other folders)
